--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "trustification-ui",
-  "name": "Trustification UI",
+  "short_name": "trusti-ui",
+  "name": "Trusti UI",
   "icons": [
     {
       "src": "favicon.ico",
