--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@trustification-ui/root",
+  "name": "@trusti-ui/root",
   "version": "1.0.0",
   "license": "Apache-2.0",
   "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/trustification/trustification-ui.git"
+    "url": "https://github.com/trusti/trusti-ui.git"
   },
   "scripts": {
     "clean": "rimraf ./dist && npm run clean -ws --if-present",
@@ -15,10 +15,13 @@
     "start:dev:common": "npm run start:dev -w common",
     "start:dev:server": "npm run start:dev -w server",
     "start:dev:client": "npm run start:dev -w client",
-    "start:dev": "concurrently -n common,client -c 'white.bold.inverse,green.bold.inverse,blue.bold.inverse' 'npm:start:dev:common' 'npm:start:dev:client'",
+    "start:dev": "concurrently -n port-forward,common,client -c 'white.bold.inverse,green.bold.inverse,blue.bold.inverse' 'npm:port-forward' 'npm:start:dev:common' 'npm:start:dev:client'",
     "start": "npm run build -w common -w client && npm run start -w server",
     "test": "npm run test -ws --if-present --",
-    "lint": "npm run lint -ws --if-present --"
+    "lint": "npm run lint -ws --if-present --",
+    "port-forward:hub": "kubectl port-forward svc/myapp-trusti-api-service -n default 8080:8080",
+    "port-forward:keycloak": "kubectl port-forward svc/tackle-keycloak-sso -n default 9001:8080",
+    "port-forward": "concurrently -c auto 'npm:port-forward:*'"
   },
   "lint-staged": {
     "package-lock.json": "./scripts/verify_lock.mjs",
