--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@trustification-ui/server",
+  "name": "@trusti-ui/server",
   "version": "0.1.0",
   "license": "Apache-2.0",
   "private": true,
