--- a/.github/workflows/image-build.yaml
+++ b/.github/workflows/image-build.yaml
@@ -15,10 +15,10 @@ concurrency:
 
 jobs:
   image-build:
-    uses: ./.github/workflows/build-push-images.yaml
+    uses: carlosthe19916/release-tools/.github/workflows/build-push-images.yaml@main
     with:
       registry: "ghcr.io"
-      image_name: "${{ github.repository_owner }}/trustify-ui"
+      image_name: "${{ github.repository_owner }}/trusti-ui"
       containerfile: "./Containerfile"
       architectures: '[ "amd64", "arm64", "ppc64le", "s390x" ]'
       extra-args: "--ulimit nofile=4096:4096"
