--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "start": "npm run build -w common -w client && npm run start -w server",
     "test": "npm run test -ws --if-present --",
     "lint": "npm run lint -ws --if-present --",
-    "port-forward:hub": "kubectl port-forward svc/myapp-trusti-api-service -n default 8080:8080",
-    "port-forward:keycloak": "kubectl port-forward svc/tackle-keycloak-sso -n default 9001:8080",
+    "port-forward:hub": "kubectl port-forward svc/myapp-trusti-api-service -n trusti 8080:8080",
+    "port-forward:keycloak": "kubectl port-forward svc/tackle-keycloak-sso -n trusti 9001:8080",
     "port-forward": "concurrently -c auto 'npm:port-forward:*'"
   },
   "lint-staged": {
